# llm

./: .gitignore  README.md
data-store/: .gitignore  README.md  package.json  pnpm-lock.yaml
data-store/patches/: @sroussey__transformers@2.14.3.patch  node-html-markdown@1.3.0.patch
data-store/src/: crawler.ts  embedding.ts  index.ts  md.ts  measure.ts  store.test.ts  store.ts
embedding/: README.md  __main__.py  data.sqlite  pyproject.toml
embedding/db/: __init__.py
embedding/embedding/: __init__.py
embedding/text_embedding/: __init__.py
emoji/: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json
emoji/patches/: @sroussey__transformers@2.14.4.patch
emoji/src/: cldr.d.ts  cldr.ts  db.test.ts  db.ts  embedding.bench.ts  embedding.test.ts  embedding.ts  emoji.test.ts  emoji.ts  index.ts  llama-cpp.ts
emoji/src/embedding/: config.ts  embedding.bench.ts  llama-cpp-text-embedding.test.ts  llama-cpp-text-embedding.ts  transformers-text-embedding.test.ts  transformers-text-embedding.ts  types.ts
math/: Cargo.toml  README.md
math/src/: llama_cpp.rs  main.rs  predicted.rs  problem.rs
onnx-converter/: .gitignore  README.md  convert.py  pyproject.toml
query/: .gitignore  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
query/app/q/: README.md  package.json
search/: .env.example  .gitignore  README.md  bun.lockb  index.ts  package.json
yt/: .env.example  README.md  bun.lockb  package.json
yt/src/: cli.ts  pipe.ts
yt/src/feat/: audio.ts  llm.ts  subtitle.ts  ts.ts
yt/src/lib/: cache.ts  chunk.ts  db.ts  (+8 more)
(+7 files in other folders)
