[tool.poetry]
name = "embedding"
version = "0.1.0"
description = ""
authors = ["tnraro <deokji53@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^2.2.2"
sqlite-vss = "^0.1.2"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
