[tool.poetry]
name = "onnx-converter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = {extras = ["torch"], version = "^4.37.2"}
onnxruntime = "<1.16.0"
optimum = "^1.16.2"
onnx = "^1.15.0"
tqdm = "^4.66.1"
sentence-transformers = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
